Update 'mg90vdlld-go' component image to: quay.io/rhtap-test-organization-jk/rhtap-qe-go:42f0e2d8750c6721854ff92aabbb56b7e6bce9eb@sha256:3b440de1f95a5334e1fc0a27d7e3a93ad5a6c0fe7f866896853df23bdf234abc

--- a/components/mg90vdlld-go/overlays/development/deployment-patch.yaml
+++ b/components/mg90vdlld-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: mg90vdlld-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap-test-organization-jk/rhtap-qe-go:42f0e2d8750c6721854ff92aabbb56b7e6bce9eb@sha256:3b440de1f95a5334e1fc0a27d7e3a93ad5a6c0fe7f866896853df23bdf234abc
+          name: container-image
